Fix JSON syntax in manifest.json

--- a/Rom 47/manifest.json
+++ b/Rom 47/manifest.json
@@ -1,3 +1,3 @@
 {
-  "files": ["pak1.json", "pak2.json", "pak3.json", "pak4.json", "pak5.json", "pak6.json", "pak7.json", "pak8.json", "pak9.json, "pak10.json""]
+  "files": ["pak1.json", "pak2.json", "pak3.json", "pak4.json", "pak5.json", "pak6.json", "pak7.json", "pak8.json", "pak9.json", "pak10.json",]
 }
